fixed background position on mobile

--- a/client/src/pages/Login/style.scss
+++ b/client/src/pages/Login/style.scss
@@ -9,6 +9,7 @@
     background-image: url(/static/media/bright.4957dd70.jpg);
     height: 100vh;
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     text-align: center;
 }
@@ -65,6 +66,10 @@ h6 {
 }
 
 @media only screen and ( max-width: 414px ) {
+    .loginContainer {
+        background-position: 75% 100%;
+    }
+
     .logo {
         width: 90%;
         margin-bottom: 25px;
